Add map and filter difficulty cases

--- a/DOM_base/Task_14/index.html
+++ b/DOM_base/Task_14/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <script src="index.js" type="module"></script>
+    <script src="arr_map.js" type="module"></script>
 </body>
 </html>
