--- a/js_to_HTML/js_to_HTML.html
+++ b/js_to_HTML/js_to_HTML.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js_to_HTML.js"></script>
+<h1 id="heading">Find the buried treasure</h1>
+<img id="map" width=600 height=600
+        src="https://kartinkin.net/uploads/posts/2022-03/1646786028_1-kartinkin-net-p-karta-sokrovishch-kartinki-1.jpg">
+    <p id="distance"></p>
+<script src="js_to_HTML.js" type="module"></script>
+<script src="module.js" type="module"></script>
 </body>
 </html>
