Add function tasks

--- a/server/index.html
+++ b/server/index.html
@@ -9,8 +9,7 @@
   <title>LOl Kek</title>
 </head>
 <body>
-<h1>HI server!!</h1>
-<h2>Helo node!!</h2>
+<h1>Lol kek fuck you!</h1>
 <!--<script src="index.js" type="module"></script>-->
 </body>
 </html>
